--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 #HexacolorSample,
 #HSLcolorSample,
 #RGBPrimaryColorSample {
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 200px;
   border: 1px solid black;
-  border-radius: 20%;
+  border-radius: 5px;
   margin: auto;
 }
 
